objects/LAT_IMM_Operations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndpointUrl__c</fullName>
        <label>EndpointUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Http_operation__c</fullName>
        <label>Http_operation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name_Header__c</fullName>
        <label>Service_Name_Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idAlmacen__c</fullName>
        <label>idAlmacen</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idConceptoGasto__c</fullName>
        <label>idConceptoGasto</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idCurrency__c</fullName>
        <label>idCurrency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idStatus__c</fullName>
        <label>idStatus</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>measureUnit__c</fullName>
        <label>measureUnit</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operation_Name_header__c</fullName>
        <label>operation_Name_header</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userLDAP__c</fullName>
        <label>userLDAP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <label>userName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x_Api_key__c</fullName>
        <label>x_Api_key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>LAT_IMM_Operations</label>
</CustomObject>